[gd_scene load_steps=37 format=2]

[ext_resource path="res://mainmenu/art/font/kenpixel/kenpixel.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://shared/menu_pause/PauseMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://games/Jerimiah/assets/MetersUpStreet.png" type="Texture" id=3]
[ext_resource path="res://games/Jerimiah/assets/CitationViewPane.png" type="Texture" id=4]
[ext_resource path="res://games/Jerimiah/assets/DetailMeter.png" type="Texture" id=5]
[ext_resource path="res://games/Jerimiah/assets/DetailBackground.png" type="Texture" id=6]
[ext_resource path="res://games/Jerimiah/assets/MeterAttendant.png" type="Texture" id=7]
[ext_resource path="res://games/Jerimiah/scripts/World.gd" type="Script" id=8]
[ext_resource path="res://games/Jerimiah/assets/DetailMeterGaugeArm.png" type="Texture" id=9]
[ext_resource path="res://shared/input/button_icon.tscn" type="PackedScene" id=11]
[ext_resource path="res://games/Jerimiah/scenes/Meter.tscn" type="PackedScene" id=12]
[ext_resource path="res://games/Jerimiah/assets/expiredTag.png" type="Texture" id=13]
[ext_resource path="res://games/Jerimiah/scripts/DetailedMeter.gd" type="Script" id=14]
[ext_resource path="res://games/Jerimiah/scenes/ParkingSpace.tscn" type="PackedScene" id=15]
[ext_resource path="res://shared/input/art/keyboard/char_n.png" type="Texture" id=16]
[ext_resource path="res://shared/input/art/keyboard/char_m.png" type="Texture" id=17]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 3, 10 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 5, 11 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10, 56.5 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://mainmenu/art/font/kenpixel/mini.ttf"

[sub_resource type="DynamicFont" id=37]
size = 14
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=38]
size = 14
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=26]
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=35]
outline_color = Color( 0.215686, 0.145098, 0.219608, 1 )
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.0901961, 0.0666667, 0.101961, 1 )

[sub_resource type="DynamicFont" id=18]
resource_local_to_scene = true
size = 10
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 5.0

[sub_resource type="DynamicFont" id=19]
resource_local_to_scene = true
size = 8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxLine" id=5]
color = Color( 0.0901961, 0.0666667, 0.101961, 1 )

[sub_resource type="DynamicFont" id=20]
resource_local_to_scene = true
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=28]
size = 14
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=33]
size = 14
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=31]
font_path = "res://mainmenu/art/font/kenpixel/high.ttf"

[sub_resource type="DynamicFont" id=32]
size = 27
extra_spacing_char = 2
font_data = SubResource( 31 )

[sub_resource type="DynamicFont" id=34]
extra_spacing_char = 1
font_data = SubResource( 31 )

[sub_resource type="DynamicFont" id=36]
extra_spacing_char = 1
font_data = SubResource( 31 )

[node name="World" type="Node2D"]
script = ExtResource( 8 )

[node name="StreetView" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Sprite" type="Sprite" parent="StreetView"]
position = Vector2( 322, 50 )
texture = ExtResource( 3 )

[node name="Border" type="ReferenceRect" parent="StreetView"]
margin_left = 1.0
margin_top = 1.0
margin_right = 639.0
margin_bottom = 100.0
border_color = Color( 0.0901961, 0.0666667, 0.101961, 1 )
border_width = 2.0
editor_only = false

[node name="MeterMonitor (player)" type="Node2D" parent="StreetView"]

[node name="Meter1" parent="StreetView" instance=ExtResource( 12 )]
position = Vector2( 184, 51 )

[node name="Meter2" parent="StreetView" instance=ExtResource( 12 )]
position = Vector2( 315, 51 )

[node name="Meter3" parent="StreetView" instance=ExtResource( 12 )]
position = Vector2( 445, 51 )

[node name="Meter4" parent="StreetView" instance=ExtResource( 12 )]
position = Vector2( 576, 51 )

[node name="MeterAttendant" type="KinematicBody2D" parent="StreetView"]
position = Vector2( 161, 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StreetView/MeterAttendant"]
shape = SubResource( 8 )

[node name="Sprite" type="Sprite" parent="StreetView/MeterAttendant"]
texture = ExtResource( 7 )

[node name="interacts" type="Area2D" parent="StreetView/MeterAttendant"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StreetView/MeterAttendant/interacts"]
shape = SubResource( 9 )

[node name="boundaries" type="Node2D" parent="StreetView"]

[node name="boundary" type="StaticBody2D" parent="StreetView/boundaries"]
position = Vector2( -7, 47 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StreetView/boundaries/boundary"]
position = Vector2( 3, 0 )
shape = SubResource( 12 )

[node name="boundary2" type="StaticBody2D" parent="StreetView/boundaries"]
position = Vector2( 641, 51 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StreetView/boundaries/boundary2"]
position = Vector2( 3, 0 )
shape = SubResource( 12 )

[node name="ParkingSpace1" parent="StreetView" instance=ExtResource( 15 )]
position = Vector2( 129, 77 )
worldPath = NodePath("../..")
parkingMeterPath = NodePath("../Meter1")
violationsListPath = NodePath("../../CitationView/Citation/ViolationsList")
fineAmountPath = NodePath("../../CitationView/Citation/FineAmount")
citationNoticePath = NodePath("../../CitationView/Citation/CitationNotice")

[node name="ParkingSpace2" parent="StreetView" instance=ExtResource( 15 )]
position = Vector2( 258, 77 )
worldPath = NodePath("../..")
parkingMeterPath = NodePath("../Meter2")
violationsListPath = NodePath("../../CitationView/Citation/ViolationsList")
fineAmountPath = NodePath("../../CitationView/Citation/FineAmount")
citationNoticePath = NodePath("../../CitationView/Citation/CitationNotice")

[node name="ParkingSpace3" parent="StreetView" instance=ExtResource( 15 )]
position = Vector2( 389, 77 )
worldPath = NodePath("../..")
parkingMeterPath = NodePath("../Meter3")
violationsListPath = NodePath("../../CitationView/Citation/ViolationsList")
fineAmountPath = NodePath("../../CitationView/Citation/FineAmount")
citationNoticePath = NodePath("../../CitationView/Citation/CitationNotice")

[node name="ParkingSpace4" parent="StreetView" instance=ExtResource( 15 )]
position = Vector2( 519, 77 )
worldPath = NodePath("../..")
parkingMeterPath = NodePath("../Meter4")
violationsListPath = NodePath("../../CitationView/Citation/ViolationsList")
fineAmountPath = NodePath("../../CitationView/Citation/FineAmount")
citationNoticePath = NodePath("../../CitationView/Citation/CitationNotice")

[node name="DetailView" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Background" type="Sprite" parent="DetailView"]
position = Vector2( 160, 230 )
texture = ExtResource( 6 )

[node name="Meter" type="Node2D" parent="DetailView"]
visible = false
position = Vector2( 160, 230 )
script = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="DetailView/Meter"]
texture = ExtResource( 5 )

[node name="gaugeArm" type="Sprite" parent="DetailView/Meter"]
position = Vector2( -4, -52 )
rotation = -1.5708
texture = ExtResource( 9 )
offset = Vector2( 1, -9 )

[node name="ExpiredPop" type="Sprite" parent="DetailView/Meter"]
position = Vector2( -3, -41.125 )
scale = Vector2( 0.75, 0.732144 )
texture = ExtResource( 13 )

[node name="Border" type="ReferenceRect" parent="DetailView"]
margin_left = 1.0
margin_top = 100.0
margin_right = 320.0
margin_bottom = 359.0
border_color = Color( 0.0901961, 0.0666667, 0.101961, 1 )
border_width = 2.0
editor_only = false

[node name="InspectPrompt" type="CenterContainer" parent="DetailView"]
visible = false
anchor_left = 0.0185185
anchor_top = 0.509174
anchor_right = 0.969136
anchor_bottom = 0.57387
margin_left = 240.0
margin_top = 107.0
margin_right = 316.0
margin_bottom = 125.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ContinuePrompt" type="HBoxContainer" parent="DetailView/InspectPrompt"]
margin_right = 76.0
margin_bottom = 18.0

[node name="PromptText" type="Label" parent="DetailView/InspectPrompt/ContinuePrompt"]
margin_right = 56.0
margin_bottom = 18.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 37 )
text = "Inspect"

[node name="ButtonIcon" parent="DetailView/InspectPrompt/ContinuePrompt" instance=ExtResource( 11 )]
margin_left = 60.0
margin_right = 76.0
margin_bottom = 18.0
texture = ExtResource( 16 )

[node name="ToggleExit" type="CenterContainer" parent="DetailView"]
visible = false
anchor_left = 0.0185185
anchor_top = 0.583087
anchor_right = 0.969136
anchor_bottom = 0.65213
margin_left = 185.0
margin_top = 107.0
margin_right = 316.0
margin_bottom = 125.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ContinuePrompt" type="HBoxContainer" parent="DetailView/ToggleExit"]
margin_right = 131.0
margin_bottom = 18.0

[node name="PromptText" type="Label" parent="DetailView/ToggleExit/ContinuePrompt"]
margin_right = 111.0
margin_bottom = 18.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 38 )
text = "Exit inspection"

[node name="ButtonIcon" parent="DetailView/ToggleExit/ContinuePrompt" instance=ExtResource( 11 )]
margin_left = 115.0
margin_right = 131.0
margin_bottom = 18.0
texture = ExtResource( 17 )
input = 1

[node name="CitationView" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Sprite" type="Sprite" parent="CitationView"]
position = Vector2( 480, 230 )
texture = ExtResource( 4 )

[node name="Border" type="ReferenceRect" parent="CitationView"]
margin_left = 320.0
margin_top = 100.0
margin_right = 639.0
margin_bottom = 359.0
border_color = Color( 0.0901961, 0.0666667, 0.101961, 1 )
border_width = 2.0
editor_only = false

[node name="Citation" type="ColorRect" parent="CitationView"]
margin_left = 336.0
margin_top = 115.0
margin_right = 498.0
margin_bottom = 345.0

[node name="TitleContainer" type="CenterContainer" parent="CitationView/Citation"]
anchor_right = 1.0
anchor_bottom = 0.087
margin_bottom = 2.99

[node name="Title" type="Label" parent="CitationView/Citation/TitleContainer"]
margin_left = 49.0
margin_top = 1.0
margin_right = 113.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.0901961, 0.0666667, 0.101961, 1 )
custom_fonts/font = SubResource( 26 )
text = "Citation"

[node name="ViolationsTitleContainer" type="CenterContainer" parent="CitationView/Citation"]
anchor_top = 0.148
anchor_right = 1.0
anchor_bottom = 0.248
margin_top = -0.0400009
margin_bottom = -0.0400009

[node name="ViolationsTitle" type="Label" parent="CitationView/Citation/ViolationsTitleContainer"]
margin_left = 38.0
margin_top = 1.0
margin_right = 124.0
margin_bottom = 21.0
custom_colors/font_color = Color( 0.0901961, 0.0666667, 0.101961, 1 )
custom_fonts/font = SubResource( 35 )
text = "Violations"

[node name="HSeparator" type="HSeparator" parent="CitationView/Citation"]
anchor_left = 0.117
anchor_top = 0.23
anchor_right = 0.901
anchor_bottom = 0.248
margin_left = 0.0459995
margin_top = 0.0999985
margin_right = 0.0379944
margin_bottom = -0.0400009
custom_styles/separator = SubResource( 3 )

[node name="ViolationsList" type="RichTextLabel" parent="CitationView/Citation"]
anchor_left = 0.099
anchor_top = 0.278
anchor_right = 0.901
anchor_bottom = 0.635
margin_left = -0.038002
margin_top = 0.0599937
margin_right = 0.0379944
margin_bottom = -0.0500183
custom_colors/default_color = Color( 0.882353, 0.254902, 0.254902, 1 )
custom_fonts/normal_font = SubResource( 18 )
custom_styles/normal = SubResource( 2 )
fit_content_height = true

[node name="FineAmountLabel" type="RichTextLabel" parent="CitationView/Citation"]
anchor_left = 0.154
anchor_top = 0.822
anchor_right = 0.432
anchor_bottom = 0.935
margin_left = 0.052
margin_top = -0.0600128
margin_right = -1.984
margin_bottom = -4.05
custom_colors/default_color = Color( 0.0901961, 0.0666667, 0.101961, 1 )
custom_fonts/normal_font = SubResource( 19 )
custom_styles/normal = SubResource( 2 )
text = "Fine"
fit_content_height = true

[node name="FineAmountInput" type="HSeparator" parent="CitationView/Citation"]
anchor_left = 0.377
anchor_top = 0.9
anchor_right = 0.914
anchor_bottom = 0.917
margin_left = -0.0740013
margin_top = -1.52588e-05
margin_right = 0.931992
margin_bottom = 0.0899811
custom_styles/separator = SubResource( 5 )

[node name="FineAmount" type="RichTextLabel" parent="CitationView/Citation"]
anchor_left = 0.389
anchor_top = 0.822
anchor_right = 0.926
anchor_bottom = 0.935
margin_left = -0.0180016
margin_top = -0.0600128
margin_right = -0.0119934
margin_bottom = -4.05
custom_colors/default_color = Color( 0.0901961, 0.0666667, 0.101961, 1 )
custom_fonts/normal_font = SubResource( 20 )
custom_styles/normal = SubResource( 2 )
fit_content_height = true

[node name="TogglePrompt" type="CenterContainer" parent="CitationView/Citation"]
anchor_left = 0.019
anchor_top = 0.509174
anchor_right = 0.994
anchor_bottom = 0.587
margin_left = -0.0780034
margin_top = -0.110016
margin_right = -2.02797
margin_bottom = -3.00992
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ContinuePrompt" type="HBoxContainer" parent="CitationView/Citation/TogglePrompt"]
margin_left = 6.0
margin_right = 149.0
margin_bottom = 18.0

[node name="PromptText" type="Label" parent="CitationView/Citation/TogglePrompt/ContinuePrompt"]
margin_right = 123.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0.0901961, 0.0666667, 0.101961, 1 )
custom_fonts/font = SubResource( 28 )
text = "Toggle violation"

[node name="ButtonIcon" parent="CitationView/Citation/TogglePrompt/ContinuePrompt" instance=ExtResource( 11 )]
margin_left = 127.0
margin_right = 143.0
margin_bottom = 18.0
texture = ExtResource( 16 )

[node name="CitationPrompt" type="CenterContainer" parent="CitationView/Citation"]
visible = false
anchor_left = 0.0185185
anchor_top = 0.509174
anchor_right = 0.969136
anchor_bottom = 0.57387
margin_top = -0.110016
margin_right = 2.0
margin_bottom = 1.0099

[node name="ContinuePrompt" type="HBoxContainer" parent="CitationView/Citation/CitationPrompt"]
margin_left = 17.0
margin_right = 139.0
margin_bottom = 18.0
size_flags_horizontal = 5
size_flags_vertical = 5
alignment = 1

[node name="PromptText" type="Label" parent="CitationView/Citation/CitationPrompt/ContinuePrompt"]
margin_right = 102.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0.0901961, 0.0666667, 0.101961, 1 )
custom_fonts/font = SubResource( 33 )
text = "Issue citation"

[node name="ButtonIcon" parent="CitationView/Citation/CitationPrompt/ContinuePrompt" instance=ExtResource( 11 )]
margin_left = 106.0
margin_right = 122.0
margin_bottom = 18.0
texture = ExtResource( 16 )

[node name="CitationNotice" type="CenterContainer" parent="CitationView/Citation"]
visible = false
anchor_left = 0.0280001
anchor_top = 0.349
anchor_right = 0.971
anchor_bottom = 0.64
margin_left = -6.53602
margin_top = 42.73
margin_right = 5.69797
margin_bottom = 0.799988
rect_rotation = -15.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ContinuePrompt" type="HBoxContainer" parent="CitationView/Citation/CitationNotice"]
margin_left = 7.0
margin_right = 158.0
margin_bottom = 25.0

[node name="PromptText" type="Label" parent="CitationView/Citation/CitationNotice/ContinuePrompt"]
margin_right = 151.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.478431, 0.129412, 0.227451, 1 )
custom_fonts/font = SubResource( 32 )
text = "Citation Issued"

[node name="Requirements" type="ColorRect" parent="CitationView"]
margin_left = 526.0
margin_top = 115.0
margin_right = 631.0
margin_bottom = 168.0

[node name="RichTextLabel" type="RichTextLabel" parent="CitationView/Requirements"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/default_color = Color( 0.0901961, 0.0666667, 0.101961, 1 )
custom_fonts/normal_font = SubResource( 34 )
custom_styles/normal = SubResource( 2 )
text = "Requirements
- Pay meter"

[node name="Date" type="ColorRect" parent="CitationView"]
margin_left = 526.0
margin_top = 174.0
margin_right = 631.0
margin_bottom = 199.0

[node name="RichTextLabel" type="RichTextLabel" parent="CitationView/Date"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/default_color = Color( 0.0901961, 0.0666667, 0.101961, 1 )
custom_fonts/normal_font = SubResource( 36 )
custom_styles/normal = SubResource( 2 )
text = "Date: 96.03.22"
fit_content_height = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource( 2 )]
margin_left = 24.0
margin_top = 26.0
margin_right = 191.0
margin_bottom = 246.0
help_title = "Meters up"
help_body = "Track parking violations and place citations on windshields, but be cautious... once a citation is issued it cannot be removed.

Controls
move - left / right
primary action - inspect / toggle violation / issue citation
secondary action -> exit inspection"

[connection signal="area_entered" from="StreetView/MeterAttendant/interacts" to="." method="meter_attendant_area_entered"]
[connection signal="area_exited" from="StreetView/MeterAttendant/interacts" to="." method="meter_attendant_area_exited"]
